Fixed 'READ MORE' spacing

--- a/styles.css
+++ b/styles.css
@@ -81,8 +81,8 @@ img {
   padding: 1rem 1.5rem;
   font-size: 0.875rem;
   font-weight: 700;
-  letter-spacing: 0.5rem;
-  word-spacing: -0.25rem;
+  letter-spacing: 0.375rem;
+  word-spacing: -0.125rem;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -100,7 +100,8 @@ img {
   background-color: var(--Very-dark-blue);
   color: var(--Grayish-blue);
   margin: 2rem 0;
-  padding: 1rem 1.25rem;
+  /* padding: 1rem 1.25rem; */
+  padding: 1rem 1.25rem 0 1.25rem;
 }
 
 h2 {
